--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST=localhost
-DATABASE=quiosco
-USER=root
-PASSWORD=
-PORT=3307
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=quioscoescolar
+DB_PORT=3307  
