--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
-    "promise-mysql": "^5.2.0"
+    "promise-mysql": "^5.2.0",
+    "sequelize": "^6.37.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
