--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "node --watch  app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "pg": "^8.13.0",
     "promise-mysql": "^5.2.0",
     "sequelize": "^6.37.3",
     "sqlite": "^5.1.1",
